--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -1,8 +1,3 @@
-concurrency:
-  name: my_pipeline_lock  # Ensures only one pipeline runs at a time
-  cancelInProgress: false  # New runs wait instead of canceling in-progress runs
-
-  
 trigger:
   - dev  # Runs on commits to 'dev' branch
 
@@ -22,7 +17,7 @@ stages:
             displayName: 'Run Linting'
 
   - stage: Unit_Test
-    dependsOn: Lint  # Run this stage only after Lint completes
+    dependsOn: Lint
     jobs:
       - job: RunTests
         steps:
@@ -30,7 +25,7 @@ stages:
             displayName: 'Run Unit Tests'
 
   - stage: Build_Image
-    dependsOn: Unit_Test  # Run this stage only after Unit_Test completes
+    dependsOn: Unit_Test
     jobs:
       - job: BuildDockerImage
         steps:
@@ -38,7 +33,7 @@ stages:
             displayName: 'Build Docker Image'
 
   - stage: Push_Image
-    dependsOn: Build_Image  # Run this stage only after Build_Image completes
+    dependsOn: Build_Image
     jobs:
       - job: PushToRegistry
         steps:
@@ -47,43 +42,4 @@ stages:
               echo $(DOCKER_PASSWORD) | docker login -u $(DOCKER_USERNAME) --password-stdin
               docker push $(imageName):$(Build.BuildId)
               docker push $(imageName):latest
-            displayName: 'Push Image to Docker Hub'
-
-  - stage: Pull_Image
-    dependsOn: Push_Image  # Run this stage only after Push_Image completes
-    jobs:
-      - job: PullFromRegistry
-        steps:
-          - script: docker pull $(imageName):latest
-            displayName: 'Pull Image from Docker Hub'
-
-  - stage: Deploy_K8s
-    dependsOn: Pull_Image  # Run this stage only after Pull_Image completes
-    jobs:  
-      - job: DeployToK8s
-        steps:
-          - script: |
-              kubectl apply -f k8s/deployment.yaml
-              kubectl apply -f k8s/service.yaml
-              kubectl apply -f k8s/ingress.yaml
-            displayName: 'Deploy to Kubernetes'
-
-  - stage: Deploy_Dev
-    dependsOn: Deploy_K8s  # Run this stage only after Deploy_K8s completes
-    jobs:
-      - job: DeployToDev
-        steps:
-          - script: |
-              kubectl apply -f k8s/deployment-dev.yaml
-              kubectl apply -f k8s/service-dev.yaml
-            displayName: 'Deploy to Dev Environment'
-
-  - stage: Deploy_Prod
-    dependsOn: Deploy_Dev  # Run this stage only after Deploy_Dev completes
-    jobs:
-      - job: DeployToProd
-        steps:
-          - script: |
-              kubectl apply -f k8s/deployment-prod.yaml
-              kubectl apply -f k8s/service-prod.yaml
-            displayName: 'Deploy to Production Environment'
+            displayName: 'Push Docker Image to Registry'
